<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Top bar-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showYesterday"
            android:text="@string/button_yesterday" />

        <TextView
            android:id="@+id/current_day_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="TODAY"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showTomorrow"
            android:text="@string/button_tomorrow"/>
    </LinearLayout>

    <!--Rise bar-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="riseNow"
            android:text="@string/button_rise"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rise" />

        <TextView
            android:id="@+id/rise_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="rise time"/>
    </LinearLayout>

    <!--Sleep bar-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sleepNow"
            android:text="@string/button_sleep" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_sleep" />

        <TextView
            android:id="@+id/sleep_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="sleep time"></TextView>
    </LinearLayout>

    <!--Hours slept bar-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_hours_slept" />

        <EditText
            android:id="@+id/hours_slept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!--Color buttons bar-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toggleBad" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toggleOK" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toggleGood" />
    </LinearLayout>

    <!--Comments bar-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_comments" />

        <EditText
            android:id="@+id/comments"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>
